--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Bot-BasicBot-Pluggable-Module-JIRA
 
-0.01    Date/time
-        First version, released on an unsuspecting world.
+0.02 - Tue Nov  2 14:35:41 CDT 2010
+ - remove t/pod-coverage.t and t/boilerplate.t so that tests will pass
+
+0.01 - Fri Oct 22 11:59:29 CDT 2010
+ - first release
 
